--- a/x86.config
+++ b/x86.config
@@ -6794,6 +6794,21 @@ CONFIG_PACKAGE_watchcat=y
 # Xorg
 #
 
+#diy主题
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-netgearrainbow=y
+#diy插件
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-serverchan=y
+# CONFIG_PACKAGE_FileBrowser=y
+# CONFIG_PACKAGE_OpenAppFilter=y
+# CONFIG_PACKAGE_luci-app-vssr=y
+# CONFIG_PACKAGE_luci-app-koolproxyR=y
+# IPv6支持:
+# cat >> .config <<EOF
+# CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+# CONFIG_PACKAGE_ipv6helper=y
+
 #
 # Font-Utils
 #
