--- a/x86.config
+++ b/x86.config
@@ -6801,9 +6801,12 @@ CONFIG_PACKAGE_watchcat=y
 # CONFIG_PACKAGE_luci-app-adguardhome=y
 # CONFIG_PACKAGE_luci-app-serverchan=y
 # CONFIG_PACKAGE_FileBrowser=y
-# CONFIG_PACKAGE_OpenAppFilter=y
+CONFIG_PACKAGE_OpenAppFilter=y
 # CONFIG_PACKAGE_luci-app-vssr=y
 # CONFIG_PACKAGE_luci-app-koolproxyR=y
+CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_luci-access-control=y
 # IPv6支持:
 # cat >> .config <<EOF
 # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
