--- a/x86.config
+++ b/x86.config
@@ -6798,8 +6798,8 @@ CONFIG_PACKAGE_watchcat=y
 # CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-netgearrainbow=y
 #diy插件
-# CONFIG_PACKAGE_luci-app-adguardhome=y
-# CONFIG_PACKAGE_luci-app-serverchan=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-serverchan=y
 # CONFIG_PACKAGE_FileBrowser=y
 CONFIG_PACKAGE_OpenAppFilter=y
 # CONFIG_PACKAGE_luci-app-vssr=y
