--- a/x86.config
+++ b/x86.config
@@ -6810,6 +6810,8 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # CONFIG_PACKAGE_luci-access-control=y
 CONFIG_PACKAGE_luci-app-beardropper=y
 CONFIG_PACKAGE_OpenClash=y
+CONFIG_PACKAGE_luci-app-control-weburl=y
+
 # IPv6支持:
 # cat >> .config <<EOF
 # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
