--- a/111555.config
+++ b/111555.config
@@ -525,8 +525,8 @@ CONFIG_PACKAGE_busybox=y
 # CONFIG_BUSYBOX_CUSTOM is not set
 CONFIG_BUSYBOX_DEFAULT_HAVE_DOT_CONFIG=y
 # CONFIG_BUSYBOX_DEFAULT_DESKTOP is not set
-# CONFIG_BUSYBOX_DEFAULT_EXTRA_COMPAT=y
-# CONFIG_BUSYBOX_DEFAULT_FEDORA_COMPAT=y
+# CONFIG_BUSYBOX_DEFAULT_EXTRA_COMPAT is not set
+# CONFIG_BUSYBOX_DEFAULT_FEDORA_COMPAT is not set
 CONFIG_BUSYBOX_DEFAULT_INCLUDE_SUSv2=y
 CONFIG_BUSYBOX_DEFAULT_LONG_OPTS=y
 CONFIG_BUSYBOX_DEFAULT_SHOW_USAGE=y
@@ -671,8 +671,8 @@ CONFIG_BUSYBOX_DEFAULT_TAR=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_CREATE=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_AUTODETECT is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_FROM=y
-CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_OLDGNU_COMPATIBILITY=y
-CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_OLDSUN_COMPATIBILITY=y
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_OLDGNU_COMPATIBILITY is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_OLDSUN_COMPATIBILITY is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_GNU_EXTENSIONS=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_TO_COMMAND is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_UNAME_GNAME is not set
@@ -702,7 +702,7 @@ CONFIG_BUSYBOX_DEFAULT_CUT=y
 CONFIG_BUSYBOX_DEFAULT_DATE=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_DATE_ISOFMT=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_DATE_NANO is not set
-CONFIG_BUSYBOX_DEFAULT_FEATURE_DATE_COMPAT=y
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_DATE_COMPAT is not set
 CONFIG_BUSYBOX_DEFAULT_DD=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_DD_SIGNAL_HANDLING=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_DD_THIRD_STATUS_LINE is not set
@@ -1011,7 +1011,7 @@ CONFIG_BUSYBOX_DEFAULT_DEFAULT_DEPMOD_FILE=""
 # CONFIG_BUSYBOX_DEFAULT_ACPID is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_ACPID_COMPAT is not set
 # CONFIG_BUSYBOX_DEFAULT_BLKDISCARD is not set
-CONFIG_BUSYBOX_DEFAULT_BLKID=y
+# CONFIG_BUSYBOX_DEFAULT_BLKID is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_BLKID_TYPE is not set
 # CONFIG_BUSYBOX_DEFAULT_BLOCKDEV is not set
 # CONFIG_BUSYBOX_DEFAULT_CAL is not set
@@ -1507,7 +1507,7 @@ CONFIG_BUSYBOX_DEFAULT_ASH_GETOPTS=y
 CONFIG_BUSYBOX_DEFAULT_ASH_CMDCMD=y
 # CONFIG_BUSYBOX_DEFAULT_CTTYHACK is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH is not set
-CONFIG_BUSYBOX_DEFAULT_HUSH_BASH_COMPAT=y
+# CONFIG_BUSYBOX_DEFAULT_HUSH_BASH_COMPAT is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH_BRACE_EXPANSION is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH_LINENO_VAR is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH_BASH_SOURCE_CURDIR is not set
@@ -2591,7 +2591,7 @@ CONFIG_PACKAGE_kmod-usb-ehci=y
 # CONFIG_PACKAGE_kmod-usb-hid is not set
 # CONFIG_PACKAGE_kmod-usb-ledtrig-usbport is not set
 CONFIG_PACKAGE_kmod-usb-net=y
-# CONFIG_PACKAGE_kmod-usb-net-asix=y
+CONFIG_PACKAGE_kmod-usb-net-asix=y
 # CONFIG_PACKAGE_kmod-usb-net-asix-ax88179 is not set
 # CONFIG_PACKAGE_kmod-usb-net-cdc-eem is not set
 CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
@@ -3184,7 +3184,7 @@ CONFIG_PACKAGE_luci-lib-fs=y
 # Filesystem
 #
 # CONFIG_PACKAGE_libacl is not set
-CONFIG_PACKAGE_libattr=y
+# CONFIG_PACKAGE_libattr is not set
 # CONFIG_PACKAGE_libfuse is not set
 # CONFIG_PACKAGE_libfuse3 is not set
 # CONFIG_PACKAGE_libow is not set
@@ -5962,7 +5962,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 # Disc
 #
 # CONFIG_PACKAGE_blkdiscard is not set
-CONFIG_PACKAGE_blkid=y
+# CONFIG_PACKAGE_blkid is not set
 # CONFIG_PACKAGE_blockdev is not set
 # CONFIG_PACKAGE_cfdisk is not set
 # CONFIG_PACKAGE_cgdisk is not set
@@ -6499,7 +6499,7 @@ CONFIG_PACKAGE_ubi-utils=y
 # CONFIG_PACKAGE_ugps is not set
 # CONFIG_PACKAGE_uledd is not set
 # CONFIG_PACKAGE_unshare is not set
-# CONFIG_PACKAGE_usb-modeswitch=y
+# CONFIG_PACKAGE_usb-modeswitch is not set
 # CONFIG_PACKAGE_usbreset is not set
 CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_uuidd is not set
