--- a/111555.config
+++ b/111555.config
@@ -51,7 +51,7 @@ CONFIG_TARGET_ramips_mt7620=y
 # CONFIG_TARGET_ramips_rt305x is not set
 # CONFIG_TARGET_ramips_rt3883 is not set
 # CONFIG_TARGET_MULTI_PROFILE is not set
-CONFIG_TARGET_ramips_mt7620_Default=y
+# CONFIG_TARGET_ramips_mt7620_Default is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_alfa-network_ac1200rm is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_alfa-network_r36m-e4g is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_alfa-network_tube-e4g is not set
@@ -85,7 +85,7 @@ CONFIG_TARGET_ramips_mt7620_Default=y
 # CONFIG_TARGET_ramips_mt7620_DEVICE_elecom_wrh-300cr is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_engenius_esr600 is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_fon_fon2601 is not set
-# CONFIG_TARGET_ramips_mt7620_DEVICE_glinet_gl-mt300a is not set
+CONFIG_TARGET_ramips_mt7620_DEVICE_glinet_gl-mt300a=y
 # CONFIG_TARGET_ramips_mt7620_DEVICE_glinet_gl-mt300n is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_glinet_gl-mt750 is not set
 # CONFIG_TARGET_ramips_mt7620_DEVICE_hnet_c108 is not set
@@ -164,7 +164,7 @@ CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="ramips"
 CONFIG_TARGET_SUBTARGET="mt7620"
-CONFIG_TARGET_PROFILE="Default"
+CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt300a"
 CONFIG_TARGET_ARCH_PACKAGES="mipsel_24kc"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mno-branch-likely -mips32r2 -mtune=24kc"
 CONFIG_CPU_TYPE="24kc"
@@ -189,7 +189,6 @@ CONFIG_DEFAULT_kmod-leds-gpio=y
 CONFIG_DEFAULT_kmod-nf-nathelper=y
 CONFIG_DEFAULT_kmod-nf-nathelper-extra=y
 CONFIG_DEFAULT_kmod-rt2800-soc=y
-CONFIG_DEFAULT_kmod-usb-ledtrig-usbport=y
 CONFIG_DEFAULT_kmod-usb-ohci=y
 CONFIG_DEFAULT_kmod-usb2=y
 CONFIG_DEFAULT_libc=y
@@ -2586,7 +2585,7 @@ CONFIG_PACKAGE_kmod-usb-core=y
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 CONFIG_PACKAGE_kmod-usb-ehci=y
 # CONFIG_PACKAGE_kmod-usb-hid is not set
-CONFIG_PACKAGE_kmod-usb-ledtrig-usbport=y
+# CONFIG_PACKAGE_kmod-usb-ledtrig-usbport is not set
 CONFIG_PACKAGE_kmod-usb-net=y
 # CONFIG_PACKAGE_kmod-usb-net-aqc111 is not set
 # CONFIG_PACKAGE_kmod-usb-net-asix is not set
