--- a/111555.config
+++ b/111555.config
@@ -6443,6 +6443,13 @@ CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_ykpers is not set
 # end of Utilities
 
+#diy主题
+# CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-theme-netgearrainbow=y
+#diy插件
+# CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-serverchan=y
+
 #
 # Xorg
 #
