--- a/.github/workflows/Build_GL-MT300A-MIFI.yml
+++ b/.github/workflows/Build_GL-MT300A-MIFI.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build_GL-MT300A-MIFI
+name: Build_CPE-MIFI
 
 on:
   repository_dispatch:
