--- a/.github/workflows/Build_CPE-MIFI.yml
+++ b/.github/workflows/Build_CPE-MIFI.yml
@@ -81,6 +81,7 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
+        cp patches/997-hxd-ec20.patch target/linux/ramips/patches-5.4/997-hxd-ec20.patch
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
