--- a/.github/workflows/Build_CPE.yml
+++ b/.github/workflows/Build_CPE.yml
@@ -24,7 +24,7 @@ env:
   REPO_BRANCH: openwrt-18.06
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: 111555.config
-  DIY_P1_SH: diy-part1-mifi.sh
+  DIY_P1_SH: diy-part1-cpe.sh
   DIY_P2_SH: diy-part2-mifi.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
