--- a/111555.config
+++ b/111555.config
@@ -6473,6 +6473,59 @@ CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-serverchan=y
 
+# ROOter
+# Basic Applications
+# CONFIG_PACKAGE_ext-command is not set
+# CONFIG_PACKAGE_ext-extra is not set
+# CONFIG_PACKAGE_ext-p910nd is not set
+# CONFIG_PACKAGE_ext-samba is not set
+# CONFIG_PACKAGE_ext-umount is not set
+# CONFIG_PACKAGE_ext-update is not set
+# end of Basic Applications
+
+# Basic Support
+CONFIG_PACKAGE_ext-buttons=y
+CONFIG_PACKAGE_ext-rooter-basic=y
+CONFIG_PACKAGE_ext-sms=y
+# end of Basic Support
+
+# Drivers
+CONFIG_PACKAGE_rmbim=y
+CONFIG_PACKAGE_rqmi=y
+# end of Drivers
+
+# Optional Applications
+# CONFIG_PACKAGE_bwmon is not set
+# CONFIG_PACKAGE_ext-hdidle is not set
+# CONFIG_PACKAGE_ext-mwansnap is not set
+# CONFIG_PACKAGE_ext-wireguard is not set
+# CONFIG_PACKAGE_ext-yamon3 is not set
+# CONFIG_PACKAGE_speedtest is not set
+# CONFIG_PACKAGE_wifimac=y
+# end of Optional Applications
+
+# Protocols
+CONFIG_PACKAGE_luci-proto-3x=y
+CONFIG_PACKAGE_luci-proto-mbim=y
+# end of Protocols
+#
+# Splash Screens
+# CONFIG_PACKAGE_splash is not set
+# end of Splash Screens
+
+# Wifi
+# CONFIG_PACKAGE_ext-wifi=y
+# end of Wifi
+
+# CONFIG_PACKAGE_ext-rooter16 is not set
+# CONFIG_PACKAGE_ext-rooter4 is not set
+# CONFIG_PACKAGE_ext-rooter45 is not set
+# CONFIG_PACKAGE_ext-rooter8-samba is not set
+# CONFIG_PACKAGE_ext-rooter8-vpn is not set
+# CONFIG_PACKAGE_ext-rooterbcm16 is not set
+# CONFIG_PACKAGE_ext-rooterbcm8 is not set
+# end of ROOter
+
 #
 # Xorg
 #
