--- a/111555.config
+++ b/111555.config
@@ -511,6 +511,7 @@ CONFIG_FEED_telephony=y
 CONFIG_FEED_freifunk=y
 CONFIG_FEED_helloworld=y
 CONFIG_FEED_xiaorouji=y
+CONFIG_FEED_infinityfreedom=y
 
 #
 # Base system
@@ -6468,6 +6469,7 @@ CONFIG_PACKAGE_usbutils=y
 
 #diy主题
 # CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 # CONFIG_PACKAGE_luci-theme-netgearrainbow=y
 #diy插件
 # CONFIG_PACKAGE_luci-app-adguardhome=y
