--- a/cpe-x.config
+++ b/cpe-x.config
@@ -6484,6 +6484,7 @@ CONFIG_PACKAGE_usbutils=y
 
 #diy主题
 # CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 # CONFIG_PACKAGE_luci-theme-netgearrainbow=y
 
