--- a/cpe-x.config
+++ b/cpe-x.config
@@ -6492,6 +6492,7 @@ CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 # CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-serverchan=y
 CONFIG_PACKAGE_luci-app-hotspot=y
+CONFIG_PACKAGE_luci-app-modeminfo=y
 
 # ROOter
 # Basic Applications
