--- a/cpe-x.config
+++ b/cpe-x.config
@@ -511,6 +511,7 @@ CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
 CONFIG_FEED_freifunk=y
 CONFIG_FEED_helloworld=y
+CONFIG_FEED_extd=y
 CONFIG_FEED_xiaorouji=y
 CONFIG_FEED_infinityfreedom=y
 
