--- a/cpe-x.config
+++ b/cpe-x.config
@@ -4718,6 +4718,7 @@ CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wol-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-travelmate-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-travelmate-en=y
 # end of LuCI
 
 #
